Added scripts coming from SimuEvol

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,23 @@ Experiment*
 .idea/
 /bayescode
 /SimuEvol
+.ipynb_checkpoints/
+/notebooks
+/qsub
+*.pyc
+*.aux
+*.log
+*.synctex.gz
+*.swp
+*.pdf
+*.p
+*.out
+*.nav
+*.snm
+*.toc
+*.soc
+*.loc
+*.dvi
+*.bbl
+*.blg
+*.contdiff
