Split config into several files

--- a/config.yaml
+++ b/config.yaml
@@ -1,21 +1,1 @@
-EXPERIMENT:
-  Experiment
-TREE:
-  SimuEvol/data/trees/mammal_subtree.tre
-SIMULATION_PREFERENCES:
-  SimuEvol/data/preferences/np.txt
-SIMULATION_NUC_MATRIX:
-  SimuEvol/data/matrices/nucleotide_GTR.tsv
-SIMULATION_COR_MATRIX:
-  SimuEvol/data/matrices/correlation3x3_zero.tsv
-SIMULATION_MUTATION_RATE: 1e-8
-SIMULATION_ROOT_AGE: 50e6
-SIMULATION_GENERATION_TIME: 40
-SIMULATION_POP_SIZE: 500
-SIMULATION_SAMPLE_SIZE: 20
-SIMULATION_BETA: 1.0
-SIMULATION_LINKED_SITES: true
-INFERENCE_POINTS: 50
-INFERENCE_NCAT: 10
-INFERENCE_CHAINS: [1, 2]
-INFERENCE_POLYMORPHISM: [false, true]
+EXPERIMENT: test
