Branch-wise correlation switch

--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,7 @@ SIMULATION:
   GENERATION_TIME: 10
   BETA: 1.0
   EXON_SIZE: 100
+  BRANCH_WISE_CORRELATION: true
 SimuDiv:
   NBR_GRID_STEP: 100
 SimuPoly:
@@ -24,10 +25,10 @@ INFERENCE:
   PRECISION: 12
   CLAMP_PREFERENCES: true
   NCAT: 30
-  CLAMP_MUTATION_RATES: true
-  CLAMP_POP_SIZES: true
+  CLAMP_MUTATION_RATES: false
+  CLAMP_POP_SIZES: false
   CLAMP_NUC_MATRIX: false
-  CLAMP_CORR_MATRIX: true
+  CLAMP_CORR_MATRIX: false
   DEBUG: false
 PLOT:
   BURN_IN: 100
