--- a/config.yaml
+++ b/config.yaml
@@ -7,9 +7,10 @@ SIMULATION:
   COR_MATRIX: SimuEvol/data/matrices/correlation3x3.tsv
   MUTATION_RATE: 1.0e-8
   ROOT_AGE: 300e6
-  GENERATION_TIME: 10
+  GENERATION_TIME: 5
   BETA: 1.0
   EXON_SIZE: 100
+  SEED: 0
   BRANCH_WISE_CORRELATION: true
 SimuDiv:
   NBR_GRID_STEP: 100
@@ -23,7 +24,7 @@ INFERENCE_REPLICATE:
 INFERENCE:
   POINTS: 1000
   PRECISION: 12
-  CLAMP_PREFERENCES: true
+  CLAMP_PREFERENCES: false
   NCAT: 30
   CLAMP_MUTATION_RATES: false
   CLAMP_POP_SIZES: false
