Use traits for inference

--- a/config.yaml
+++ b/config.yaml
@@ -2,19 +2,19 @@ EXPERIMENT:
   COMPILE: false
 SIMULATION:
   TREE: SimuEvol/data/trees/mammal_subtree.tre.annotated
-  PREFERENCES: SimuEvol/data/preferences/gal4_5000_500.prefs
+  PREFERENCES: SimuEvol/data/preferences/gal4_5000_30.prefs
   NUC_MATRIX: SimuEvol/data/matrices/nucleotide_GTR.tsv
   PRECISION_MATRIX: SimuEvol/data/matrices/precision3x3.tsv
   MUTATION_RATE_PER_GENERATION: 1.0e-8
   ROOT_AGE: 300e6
-  GENERATION_TIME: 5
+  GENERATION_TIME: 20
   BETA: 1.0
   EXON_SIZE: 100
   SEED: 0
-  BRANCH_WISE_CORRELATION: true
+  BRANCH_WISE_CORRELATION: false
   FIXED_POP_SIZES: false
   FIXED_MUT_RATE: false
-  FIXED_GENERATION_TIME: true
+  FIXED_GENERATION_TIME: false
 SimuDiv:
   NBR_GRID_STEP: 100
 SimuPoly:
@@ -23,14 +23,15 @@ SimuPoly:
 INFERENCE_REPLICATE:
   CHAINS: [1, 2]
   POLYMORPHISM: [false, true]
-  MODELS: [node, branch]
-  SIMULATORS: [SimuDiv, SimuPoly]
+  MODELS: [node]
+  SIMULATORS: [SimuPoly, SimuDiv]
 INFERENCE:
   POINTS: 1000
   PRECISION: 10
   NCAT: 30
+  TRAITS: true
   CLAMP_PREFERENCES: false
-  CLAMP_GENERATION_TIME: true
+  CLAMP_GENERATION_TIME: false
   CLAMP_POP_SIZES: false
   CLAMP_NUC_MATRIX: false
   CLAMP_CORR_MATRIX: false
