--- a/DataSimulated/config.yaml
+++ b/DataSimulated/config.yaml
@@ -20,6 +20,7 @@ SimuDiv:
 SimuPoly:
   POP_SIZE: 5000
   SAMPLE_SIZE: 20
+  WHITE_NOISE: 0.0
 INFERENCE_REPLICATE:
   CHAINS: [1, 2]
   POLYMORPHISM: [false]
@@ -32,6 +33,7 @@ INFERENCE:
   NCAT: 30
 INFERENCE_NODE:
   TRAITS: true
+  FOSSILS: 0
   MOVE_ROOT_POP_SIZE: false
   CLAMP_PREFERENCES: false
   CLAMP_POP_SIZES: false
