--- a/DataEmpirical/config.yaml
+++ b/DataEmpirical/config.yaml
@@ -1,6 +1,6 @@
 INFERENCE_REPLICATE:
   CHAINS: [1, 2]
-  MODELS: [node, aa]
+  MODELS: [node, aa, nodeomega]
   POLYMORPHISM: [false]
 INFERENCE:
   POINTS: 1000
