Plot correlation matrix, decrease required RAM-memory

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,10 @@
 Animation/Experiment/*
 Animation/.snakemake
 DataEmpirical/OrthoMam/singlegene_alignments
+DataEmpirical/OrthoMam/SNP
+DataEmpirical/OrthoMam/.snakemake
 Data*/Experiments/*
+Data*/Analysis
 orthomam.tsv
 *.fa
 *.bestTree
