--- a/DataEmpirical/Snakefile
+++ b/DataEmpirical/Snakefile
@@ -23,12 +23,13 @@ assert (PLOT_BURN_IN < config['INFERENCE']['POINTS'])
 for program in ['bayescode']:
     diff_git_dir("{0}/{1}".format(ROOT, program), "{0}/{1}".format(EXPERIMENT, program))
 
-localrules: all, all_profiles, bayescode_model, plot_profiles, plot_traces, plot_trees, read_profiles, read_trees
+localrules: all, all_profiles, bayescode_model, plot_profiles, plot_traces, plot_trees, read_profiles, read_trees, plot_correlation_matrix, all_correlation_matrix
 
 rule all:
     input:
          EXPERIMENT + '/all_profiles',
          EXPERIMENT + '/inference_traces',
+         EXPERIMENT + '/all_correlation_matrix',
          expand(EXPERIMENT + '/inference_{model}_trees', model=[i for i in INFERENCE_MODELS if "node" in i])
 
 rule bayescode_model:
@@ -50,7 +51,7 @@ rule run_inference:
          exec=EXPERIMENT + '/{model}mutsel',
          config=EXPERIMENT + '/config.INFERENCE'
     params:
-          time="4-00:00", mem=5000, threads=1,
+          time="4-23:00", mem=1500, threads=1,
           mutsel=lambda w: MUTSEL_PARAMS if ("aa" == w.model or "node" == w.model) else "",
           poly=lambda w: " -p" if w.polymorphism.lower() == 'true' else "",
           traits=lambda w: ' --traitsfile {0}/life_history_traits.tsv'.format(EXPERIMENT) if ("node" in w.model) and os.path.isfile(EXPERIMENT + "/life_history_traits.tsv") else "",
@@ -72,6 +73,24 @@ rule plot_traces:
        err=EXPERIMENT + '/std.inference_plot.stderr'
     shell:
          'mkdir -p {output.plot} && python3 {input.src} --trace {input.trace} --output {output.plot} --burn_in {PLOT_BURN_IN} 2> {log.err} 1> {log.out}'
+
+rule plot_correlation_matrix:
+    output: plot=EXPERIMENT + '/{model}_{polymorphism}_{chain}_corr_matrix.svg'
+    input:
+         src=ROOT + "/scripts/plot_correlation_matrix.py",
+         trace=EXPERIMENT + '/{model}_{polymorphism}_{chain}_run',
+         config=EXPERIMENT + '/config.PLOT'
+    log:
+       out=EXPERIMENT + '/std.correlation_matrix_{model}_{polymorphism}_{chain}_plot.stdout',
+       err=EXPERIMENT + '/std.correlation_matrix_{model}_{polymorphism}_{chain}_plot.stderr'
+    shell:
+         'python3 {input.src} --trace {input.trace} --output {output.plot} --burn_in {PLOT_BURN_IN} 2> {log.err} 1> {log.out}'
+
+
+rule all_correlation_matrix:
+    output: plot=touch(EXPERIMENT + '/all_correlation_matrix')
+    input:
+         trace=expand(EXPERIMENT + '/{model}_{polymorphism}_{chain}_corr_matrix.svg', chain=INFERENCE_CHAINS, polymorphism=INFERENCE_POLYMORPHISM, model=[i for i in INFERENCE_MODELS if "node" in i])
 
 rule read_profiles:
     output: EXPERIMENT + '/{model}_{polymorphism}_{chain}_read.siteprofiles'
