--- a/DataSimulated/config.yaml
+++ b/DataSimulated/config.yaml
@@ -20,7 +20,8 @@ SimuDiv:
 SimuPoly:
   POP_SIZE: 5000
   SAMPLE_SIZE: 20
-  WHITE_NOISE: 0.0
+  NOISE_SIGMA: 0.0
+  NOISE_THETA: 0.9
 INFERENCE_REPLICATE:
   CHAINS: [1, 2]
   POLYMORPHISM: [false]
